# system_monitor

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  startup.sh
docker/: start.sh
src/: CMakeLists.txt
src/client/: CMakeLists.txt
src/client/cpu_usage_client/: CMakeLists.txt  cpu_usage_client.cpp
src/client/memory_usage_client/: CMakeLists.txt  memory_usage_client.cpp
src/client/sys_info_client/: CMakeLists.txt  sys_info_client.cpp
src/include/client/cpu_usage_client/: cpu_usage_client.h
src/include/client/memory_usage_client/: memory_usage_client.h
src/include/client/sys_info_client/: sys_info_client.h
src/include/monitor/: abstract_monitor.h  cpu_usage_monitor.h  memory_monitor.h  monitor.h
src/include/monitor/utils/: cpu_info.h  cpu_usage.h
src/include/qt_monitor/: inputaddress.h  mainwindow.h  monitorwidget.h  msgBox.h
src/include/server/: sync_grpc_server.h
src/include/service/: cpu_service.h
src/include/service/cpu_service/: cpu_service.h
src/include/service/memory_service/: memory_service.h
src/monitor/: CMakeLists.txt  cpu_usage_monitor.cpp  memory_monitor.cpp
src/monitor/utils/: CMakeLists.txt  cpu_info.cpp  cpu_usage.cpp
src/proto/: CMakeLists.txt  cpu_usage_info.proto  memory_usage.proto  sys_info.proto
src/qt_monitor/: CMakeLists.txt  inputaddress.cpp  inputaddress.ui  main.cpp  mainwindow.cpp  mainwindow.ui  monitorwidget.cpp  monitorwidget.ui  msgBox.cpp
src/server/: CMakeLists.txt  main.cpp  sync_grpc_server.cpp
src/service/: CMakeLists.txt  cpu_service.cpp
src/service/cpu_service/: CMakeLists.txt  cpu_service.cpp  main.cpp
src/service/memory_service/: CMakeLists.txt  main.cpp  memory_service.cpp
test/: CMakeLists.txt
test/client/cpu_usage_client/: cpu_client_test01.cpp
test/client/memory_usage_client/: memory_client_test01.cpp
test/client/sys_info_client/: sys_info_test01.cpp
test/monitor/: cpu_usage_monitor_test01.cpp  memory_monitor_test01.cpp  monitor_test01.cpp
